--- a/index.css
+++ b/index.css
@@ -6,11 +6,11 @@ body{
 @media (min-width: 900px) { /*DESKTOP*/
 
 	header{
-		margin-left: 30%;
-    	margin-right: 30%;
+		margin-left: 25%;
+    	margin-right: 25%;
     	position: fixed;
     	background-color: #fff;
-    	width: 40%;
+    	width: 50%;
     	border-top-right-radius: 10px;
     	border-top-left-radius: 10px;
     	z-index: 999;
@@ -22,17 +22,28 @@ body{
 
 	.download{
 		height: 4vw;
-		padding-top: 3%;
-		padding-bottom: 2%;
+		padding-top: 1%;
+		padding-bottom: 0.5%;
 		padding-right: 5%;
 		float: right;
 	}
 
 	.logo{
-		height: 6vw;
+		height: 4vw;
 		padding-top: 1%;
 		padding-left: 5%;
 
+	}
+
+	.ph, .tw{
+		height: 4vw;
+		padding-left: 5%;
+	}
+
+	.ig{
+		height: 3vw;
+		padding-left: 7%;
+		padding-bottom: 0.75%;
 	}
 
 	.heading1{
@@ -41,12 +52,14 @@ body{
 		padding-top: 10%;
 		color: #000;
 		opacity: 0.9;
+		line-height: 0.8;
 	}
 
 	.heading2{
 		font-size: 1.7vw;
 		line-height: 1.0;
 		opacity: 0.3;
+		line-height: 1.0;
 	}
 
 	.heading3{
@@ -91,7 +104,7 @@ body{
 
 	.main-video{
 		float: right;
-		margin-right: 10%;
+		margin-right: 13%;
 		border-radius: 2vw;
 		margin-top: 3%;
   		-webkit-box-shadow: rgba(0, 0, 0, 0.3) 0.5vw 1vw 3vw;
