--- a/index.css
+++ b/index.css
@@ -49,10 +49,10 @@ body{
 	.heading1{
 		font-size: 4vw;
 		width: 50%;
-		padding-top: 10%;
 		color: #000;
 		opacity: 0.9;
-		line-height: 0.8;
+		line-height: 1.0;
+		padding-top: 18%;
 	}
 
 	.heading2{
@@ -69,8 +69,10 @@ body{
 
 	.paragraph1{
 		width: 40%;
-		font-size: 2.2vw;
+		font-size: 1.6vw;
 		opacity: 1.0;
+		padding-top: 12%;
+		line-height: 1.0;
 	}
 
 	.paragraph2{
@@ -140,6 +142,18 @@ body{
 		width: 42vw;
 	}
 
+	.igtv{
+		height: 32vw;
+		width: 32vw;
+	}
+
+	.apps{
+		height: 16vw;
+		width: 16vw;
+		padding-top: 10%;
+		padding-left: 30%;
+	}
+
 	.sectionRight{
 		margin-top: 5%;
 		height: 42vw;
@@ -152,7 +166,6 @@ body{
 	}
 
 	footer{
-		height: 12vw;
 		padding-bottom: 10%;
 	}
 
