--- a/index.css
+++ b/index.css
@@ -47,12 +47,13 @@ body{
 	}
 
 	.heading1{
-		font-size: 4vw;
+		font-size: 60px;
 		width: 50%;
 		color: #000;
 		opacity: 0.9;
 		line-height: 1.0;
-		padding-top: 18%;
+		padding-top: 150px;
+		padding-bottom: 20px%;
 	}
 
 	.heading2{
@@ -81,7 +82,7 @@ body{
 	}
 
 	.sub-paragraph{
-		font-size: 1.8vw;
+		font-size: 24px;
 		color: #4A4A4A;
 		width: 50%;
 		opacity: 0.8;
@@ -93,7 +94,7 @@ body{
 	}
 
 	.textDivRight{
-		padding-top: 15%;
+		padding-top: 10%;
 		padding-right: 10%;
 	}
 
